PyMaker/datas/object2/RawHTML/i12101/Python_DOC_referPages.run-ipython-in-a-script.txt
<div class="post-text" itemprop="text">
<p>I am trying to do some scripting with IPython, but I am finding that it behaves very differently in a script to when I run an interactive shell.</p>
<p>For example, I can run the following interactively:</p>
<pre><code>In [1]: %profile
default

In [2]: ls /
bin/   cdrom/  etc/   initrd.img@      lib/    lib64/       media/  opt/   root/  sbin/  sys/  usr/  vmlinuz@
boot/  dev/    home/  initrd.img.old@  lib32/  lost+found/  mnt/    proc/  run/   srv/   tmp/  var/  vmlinuz.old@

In [3]: mkdir tmpdir

In [4]: cd tmpdir
/home/alex/tmp/tmpdir
</code></pre>
<p>No problem.</p>
<p>However, none of these commands works when I run them in a script:</p>
<pre><code>#!/usr/bin/ipython3

%profile
ls /
mkdir tmpdir
cd tmdir
</code></pre>
<p>I get an error:</p>
<pre><code>$ ./tmp.py 
  File "/home/alex/tmp/tmp.ipython", line 3
    %profile
    ^
SyntaxError: invalid syntax
</code></pre>
<p>I have tried running this by:</p>
<ol>
<li>calling the file directly as above, </li>
<li>calling it explicitly with ipython: `ipython3 tmp.py'</li>
<li>passing the <code>-i</code> or <code>--profile=sh</code> arguments to ipython when calling it with ipython</li>
<li>changing the file extension to <code>.ipython</code> and <code>.ipy</code></li>
</ol>
<p><strong>My question:</strong>
Why is it behaving differently in a script to the shell?  How can I get IPython to run these commands in a script?</p>
</div>
<div class="post-text" itemprop="text">
<p>They are working due to <a href="https://ipython.org/ipython-doc/3/interactive/magics.html" rel="nofollow">IPython magic</a> but they are shell commands and do not work in Python. To get them consider the <a href="https://docs.python.org/3/library/subprocess.html#subprocess.check_call" rel="nofollow"><code>subprocess</code> library</a>. Where you would have spaces in a shell command instead have comma-separated values in the list.</p>
<pre><code>import subprocess
subprocess.check_call(['ls'])
subprocess.check_call(['ls', '-a'])
</code></pre>
</div>
<span class="comment-copy">I was hoping to get the advantages of the IPython magic, but in a script form... is there any reason that this sort of thing should be available in a shell but not a script?</span>
<span class="comment-copy">I don't have any experience with this but have you tried <a href="http://ipython.org/ipython-doc/stable/interactive/reference.html#embedding" rel="nofollow noreferrer">importing IPython</a>? My understanding is that these functions are part of IPython so if you are not in that environment then you don't have access to them.</span>
<span class="comment-copy">Just tried that and it had no effect.  I assumed that because I am selecting IPython as the interpreter it would be doing this anyway...</span>
<span class="comment-copy">I've never seen it done in the manner you describe. That would be cool. But perhaps they wouldn't be called "magic" anymore!!</span>
<span class="comment-copy">I did find that <code>cat tmp.py | ipython3</code> works, but it's a bit hacky...</span>
